--- a/css.css
+++ b/css.css
@@ -934,13 +934,13 @@ text-align: center
 }
 @media screen and (max-width:430px){
 	.storyposvi img{
-				height: 200px;
+		height: 200px;
 		width: 100%;
 	}
 	.storyposjinx img{
 		height: 200px;
 		width: 100%;
-		 margin-top: 18px
+		 margin-top: 20px;
        ;
 	}
 	.storyposvi h1{
