--- a/css.css
+++ b/css.css
@@ -925,7 +925,7 @@ text-align: center
 		margin-top: 35px
 	}
 	.posterphim img{
-		height: 500px;
+		height: 400px;;
 		width: 100%
 	}
 	.ovang-1{
